--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,8 @@
     <properties>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <version.netty>4.1.6.Final</version.netty>
+        <version.netty4>4.1.14.Final</version.netty4>
+        <version.netty5>5.0.0.Alpha2</version.netty5>
     </properties>
 
     <dependencies>
@@ -19,7 +20,14 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>${version.netty}</version>
+            <version>${version.netty4}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>${version.netty5}</version>
         </dependency>
 
     </dependencies>
